# szukajwarchiwach

./: .gitignore  LICENSE  README.md  annotate_exif.py  downloader.py  get_picture_urls_for_set.py  metadata_scraper.py  pyproject.toml  quality_control.py  scraper.py
30674/: metadata.json
30906/: metadata.json
30910/: metadata.json
31533/: metadata.json
31534/: metadata.json
31540/: metadata.json
34816/: metadata.json
sets/: 30674  30843  30904  30906  30907  30908  30908.md  30909  30910  31533  31534  31540  34816
sha256/: 30674  30843  30904  30906  30907  30910  31533  31540  34816
